--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-	"name": "@elizaos/plugin-grix",
+	"name": "@elizaos/plugin-executor",
 	"version": "0.1.0",
-	"description": "A plugin for Grix universal Language for DeFi Derivatives Interactions",
-	"main": "dist/index.js",
-	"types": "dist/index.d.ts",
 	"type": "module",
+	"main": "dist/index.js",
+	"module": "dist/index.js",
+	"types": "dist/index.d.ts",
 	"exports": {
 		"./package.json": "./package.json",
 		".": {
@@ -15,30 +15,27 @@
 			}
 		}
 	},
-	"agentConfig": {
-		"pluginType": "elizaos:plugin:1.0.0",
-		"pluginParameters": {
-			"GRIX_API_KEY": {
-				"type": "string",
-				"description": "API key for accessing Grix services"
-			}
-		}
-	},
+	"files": [
+		"dist"
+	],
 	"dependencies": {
 		"@elizaos/core": "workspace:*",
-		"zod": "^3.22.4"
+		"tsup": "8.3.5",
+		"@ethersproject/bignumber": "^5.7.0",
+		"viem": "2.22.2"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
-		"tsup": "^8.3.5"
+		"@types/node": "^22.10.5"
 	},
 	"scripts": {
 		"build": "tsup --format esm --dts",
 		"dev": "tsup --format esm --dts --watch",
-		"clean": "rm -rf dist",
-		"lint": "biome lint .",
-		"lint:fix": "biome check --apply .",
-		"format": "biome format .",
-		"format:fix": "biome format --write ."
+		"test": "vitest run"
+	},
+	"peerDependencies": {
+		"whatwg-url": "7.1.0"
+	},
+	"publishConfig": {
+		"access": "public"
 	}
 }
