--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
+	"extends": "../core/tsconfig.json",
 	"compilerOptions": {
-		"target": "ESNext",
-		"module": "ESNext",
-		"moduleResolution": "Node",
-		"esModuleInterop": true,
-		"strict": true,
-		"skipLibCheck": true
+		"outDir": "dist",
+		"rootDir": "src",
+		"types": [
+			"node"
+		]
 	},
 	"include": [
-		"src"
+		"src/**/*.ts"
 	]
 }
