feat: images + readme

--- a/.envrc
+++ b/.envrc
@@ -16,7 +16,7 @@ export PRICER_URL='https://api.t1rn.io'
 
 # ============================ AI =============================
 export OPENAI_API_KEY=sk-***
-export DISABLE_ANALYSIS=false # True - Disable executor analysis; enable chat
+export DISABLE_AI_EXECUTOR_AUTORUN=false # True - Disable executor analysis; enable chat
 export DISABLE_EXECUTOR_AUTORUN=true # mandatory
 
 source .envrc.local 2>/dev/null || true
