chore: bump version

--- a/.envrc
+++ b/.envrc
@@ -6,6 +6,7 @@ use node
 # ============================ GENERAL SETTINGS ============================
 export ENVIRONMENT=testnet # can be testnet, mainnet, devnet
 export LOG_PRETTY=true
+export LOG_LEVEL=debug
 export APP_NAME=executor
 
 # ============================ KEYS FOR APPS ============================
