--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 	"dependencies": {
 		"@elizaos/core": "workspace:*",
 		"@ethersproject/bignumber": "^5.7.0",
-		"@t3rn/executor": "^0.0.3",
+		"@t3rn/executor": "0.0.4",
 		"tsup": "8.3.5",
 		"viem": "2.22.2"
 	},
